<resources>
    <string name="app_name">Pothole</string>
    <!-- TODO: Remove or change this placeholder text -->si
    <string name="web_id">AIzaSyAAmM6aY4xErY8LjvccGr_-gijU_KbnBew</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiZGFvaHVvbmdnaWFuZyIsImEiOiJjbTQwcnBuaXowNHAxMnBzNHJwdWdzNmlqIn0.okxGAxh9z1r-VKjOaep6HA</string>
    <string name="facebook_app_id">1785017158908895</string>
    <string name="fb_login_protocol_scheme">fb1785017158908895</string>
    <string name="facebook_client_token">2240fae5fc3dd90b4ddba71067f1fa69</string>
    <string name="change_language">Change Language</string>
    <string name="update_profile">Update User Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="fullnameupdate">Full name</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm New Password</string>
    <string name="updatename">Update name</string>
    <string name="updatepassword">Update password</string>
    <string name="updateimage">update image</string>
    <string name="hello">Hello, Welcome!</string>
    <string name="appDescription">Hole Alert is an app that detects potholes on road, helping users avoid bumpy roads.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signinpassword">Password</string>
    <string name="forgotpw">Forgot password?</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="continuewith">Or continue with</string>
    <string name="google">Sign in with Google</string>
    <string name="sign_up_title">SIGN UP</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="map">Map</string>
    <string name="setting">Setting</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="email_password">You have not entered an email or password</string>
    <string name="please_wait">Please wait...</string>
    <string name="login_fail">Login failed</string>
    <string name="email_empty">You have not entered an email</string>
    <string name="email_sent">Email sent</string>
    <string name="email_fail">Error, email cannot be sent</string>
    <string name="empty_fields">Please enter complete information</string>
    <string name="not_match">Passwords do not match, please try again</string>
    <string name="error_occurred">Registration failed</string>
    <string name="enter_name">You have not entered a name</string>
    <string name="update_name_success">Name updated successfully!</string>
    <string name="update_name_fail">Name update failed!</string>
    <string name="nhapthieu">You entered missing information, please check again</string>
    <string name="update_password_success">Password updated successfully!</string>
    <string name="update_password_fail">Password update failed!</string>
    <string name="auth_fail">Current password is incorrect</string>
    <string name="update_image_success">Image update successful!</string>
    <string name="update_image_fail">Image update failed!</string>
    <string name="id">User ID</string>
    <string name="name">User Name</string>
    <string name="useremail">User Email</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_user">Account</string>
    <string name="bottom_dashboard">Dashboard</string>
    <string name="bottom_setting">Setting</string>
    <string name="update">Update</string>
    <string name="saveimg">Save image change</string>
    <string name="DASHBOARD">DASHBOARD</string>
    <string name="today_count">Number of potholes today</string>
    <string name="monthly_count">Number of potholes this month</string>
    <string name="choose_count">Number of potholes per day </string>
    <string name="is"> is </string>
    <string name="error_fetching_data">Error fetching data</string>
    <string name="potholebylevel">Potholes by level</string>
    <string name="nhe">Mild</string>
    <string name="vua">Moderate</string>
    <string name="nang">Heavy</string>
    <string name="potholelast7days">Number of potholes in the last 7 days</string>
    <string name="date_label">Date</string>
    <string name="potholelevelpermonth">Pothole Levels Per Month</string>
    <string name="potholeleveldetect">Pothole level detected</string>
    <string name="Search">Search</string>
    <string name="SetRoute">Set Route</string>
    <string name="notienable">Notifications enabled</string>
    <string name="potholewarning">Warning: Potholes coming</string>
    <string name="errornotfoundbitmap">Error: Bitmap not found for severity</string>
    <string name="errorbitmapnotinitialize">Error: Bitmaps are not initialized</string>
    <string name="contributorname">"Contributor Name: "</string>
    <string name="location">"Location: "</string>
    <string name="contributiondate">"Contribution date: "</string>
    <string name="severity">"Severity: "</string>
    <string name="potholeinfo">Pothole information</string>
    <string name="close">Close</string>
    <string name="selectpotholelevel">Select pothole level</string>
    <string name="confirm">Confirm</string>
    <string name="sharingpothole">Sharing potholes...</string>
    <string name="cancel">Cancel</string>
    <string name="plserlocatinmap">Please select a location in map</string>
    <string name="fetchingroute">Fetching route...</string>
    <string name="routerequestfail">Route request failed</string>
    <string name="locationrequestfail">Location request failed</string>
    <string name="detectingpothole">Detecting potholes...</string>
    <string name="detect1pothole">"Detected 1 pothole with level: "</string>
    <string name="wanttosaveinfo">. Do you want to save this information?</string>
    <string name="arrived">Arrived</string>
    <string name="donothaveaccount">Don\'t have an account</string>
    <string name="OR">OR</string>
    <string name="dohaveaccount">Do you have an account?</string>
    <string name="confirmpassword1">Confirm Password</string>
    <string name="numberpotholeonroute">"Number of potholes on the route: "</string>
    <string name="welcome">Welcome!</string>
    <string name="Decription">Hole Alert is an app that detects potholes around VietNam National University, HCMC, helping users avoid bumpy roads.</string>
    <string name="decript2">Please sign in to your exiting account</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="dont_have_account">Not have an account</string>
    <string name="Do_you_have_an_account">Do you have an account</string>
    <string name="decript3">Sign up to use the app or register with Google</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="UserProfile">User Profile</string>
    <string name="Changeyouravatar">Change your avatar</string>
    <string name="Fullname">FULL NAME</string>
    <string name="Password2"> CURRENT PASSWORD</string>
    <string name="Confirmpass">CONFIRM PASSWORD</string>
    <string name="Newpassword">NEW PASSWORD</string>
    <string name="Save">Save</string>
    <string name="Myaccount">My account</string>
    <string name="infor">Account &amp; Security</string>
    <string name="Settings">Settings</string>
    <string name="Notification_Settings">Notification Settings</string>
    <string name="Support">Support</string>
    <string name="About">About</string>
    <string name="HelpCentre">Request Account Deletion</string>
    <string name="Logout">Sign out</string>
    <string name="OK">OK</string>
    <string name="HelpCentre2">Hole Alert is an app that detects potholes around VietNam National University, HCMC, helping users avoid bumpy roads.</string>
    <string name="deleteaccount">We are sad that you want to leave us, but please note that account deletion is irreversible</string>
    <string name="Delete">Delete</string>
    <string name="Thongke">STATISTICAL DATA</string>
    <string name="Hi">Hi,</string>
    <string name="close2">CLOSE</string>
</resources>