<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_4"
        tools:ignore="MissingConstraints" >

        <ImageView
            android:id="@+id/btn_Back3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:scaleX="1.6"
            android:scaleY="1.6"
            android:src="@drawable/baseline_arrow_back_24" />

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        app:contentPadding="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        app:shapeAppearance="@style/RoundedTopCorners"
        app:cardBackgroundColor="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/signup"
                    style="@style/SIGNIN"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:id="@+id/decript2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signup"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:alpha="0.8"
                    android:text="@string/decript3"
                    style="@style/decript2"/>

                <EditText
                    android:id="@+id/edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/decript2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    style="@style/edt_email"
                    android:autofillHints="emailAddress"/>

                <EditText
                    android:id="@+id/edt_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_Email"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="23dp"
                    style="@style/edt_password" />

                <EditText
                    android:id="@+id/edt_ConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edt_Password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="23dp"
                    android:hint="@string/Confirm_Password"
                    style="@style/edt_password" />

                <Button
                    android:id="@+id/btn_Signup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_ConfirmPass"
                    android:layout_marginTop="40dp"
                    android:text="@string/signup"
                    style="@style/btn_signin2"
                    app:backgroundTint="@null"/>

                <LinearLayout
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btn_Signup2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="7dp"
                        android:paddingRight="7dp"
                        android:text="@string/OR" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/or"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/other"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/img_Google"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/google" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/or"
                    android:gravity="center"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Do_you_have_an_account" />

                    <TextView
                        android:id="@+id/signin_new"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signin"
                        android:textColor="@color/orange"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"/>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/orange"/>

            </RelativeLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>